--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,9 +3,11 @@
     {{ if .Site.Params.CustomFooterHTML }}
     {{ .Site.Params.CustomFooterHTML | safeHTML }}
     {{ end }}
-
+    <p class="disclaimer">
+        All opinions expressed are my own and do not represent the views or opinions of any organization I work for or with.
+        Any code is provided for example purposes only and no warranties are expressed or implied.
+        Please wear safety googles or other protective equipment prior to deploying to production.   
+    </p>
     <span>&copy; {{ now.Year }} {{ .Site.Params.Footer}}</span>
-    <span>
-        Made with &#10084;&#65039; using <a target="_blank" href="https://github.com/526avijitgupta/gokarna">Gokarna</a>
-    </span>
+
 </footer>
