Change post footer for custom insert

--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -17,10 +17,8 @@
         <p>
             {{ .Content }}
         </p>
-        {{ if .Site.DisqusShortname }}
-        <div class="post-comments">
-            {{ template "_internal/disqus.html" . }}
-        </div>
+        {{ if .Site.Params.CustomPostFooterHTML }}
+        {{ .Site.Params.CustomPostFooterHTML | safeHTML }}
         {{ end }}
     </div>
 
